tests/linearity-regression/accept/accept_02.pdx
module M02 = structure {
  let x = 2
  let y = 3
}
