tests/linearity-regression/reject/s0903_out_of_order_03.pdx
module M = structure {
  let a = 1
  let b = 2
}
